# aliencoin

./: .gitignore  .travis.yml  INSTALL  Makefile.am  Makefile.in  README.md  config.bat  config.status  config521.sh  configure  configure.ac  doc4qt.txt
.tx/: config
build-aux/m4/: aliencoin_find_bdb48.m4  aliencoin_qt.m4  aliencoin_subdir_to_include.m4
contrib/: README.md  aliencoin-qt.pro  aliencoind.bash-completion  qt_translations.py  tidy_datadir.sh
contrib/bitrpc/: README.md  bitrpc.py
contrib/debian/: README.md  aliencoin-qt.desktop  aliencoin-qt.install  aliencoin-qt.lintian-overrides  aliencoin-qt.protocol  aliencoind.bash-completion  aliencoind.examples  aliencoind.install  aliencoind.lintian-overrides  aliencoind.manpages  changelog  control  copyright  rules  watch
contrib/devtools/: README.md  fix-copyright-headers.py  update-translations.py
contrib/gitian-descriptors/: README.md  gitian-linux.yml  gitian-osx-signer.yml  gitian-osx.yml  gitian-win.yml
contrib/gitian-downloader/: bluematt-key.pgp  linux-download-config  win32-download-config
contrib/init/: README.md  aliencoind.conf  aliencoind.openrc  aliencoind.openrcconf  aliencoind.service
contrib/linearize/: README.md  example-linearize.cfg  linearize-hashes.py
contrib/macdeploy/: DS_Store  README.md  background.psd  detached-sig-apply.sh  detached-sig-create.sh  fancy.plist  macdeployqtplus
contrib/qos/: README.md  tc.sh
contrib/seeds/: README.md
contrib/spendfrom/: README.md  setup.py  spendfrom.py
contrib/testgen/: README.md  base58.py
contrib/verifysfbinaries/: README.md  verify.sh
depends/: README  README.usage  config.site.in
doc/: Doxyfile  README.md  README_windows.txt  REST-interface.md  assets-attribution.md  bootstrap.md  build-osx.md  build-unix.md  coding.md  dnsseed-policy.md  gitian-building.md  init.md  multiwallet-qt.md  release-notes-1.0.3.md  release-notes.md  release-process.md  tor.md  translation_process.md  travis-ci.txt  unit-tests.md
doc/release-notes/: release-notes-0.3.22.md  release-notes-0.3.23.md  release-notes-0.4.3.md  release-notes-0.5.2.md  release-notes-0.6.0.md  release-notes-0.8.2.md  release-notes-0.9.0.md  (+2 more)
share/: setup.nsi.in  ui.rc
src/: Makefile.am  Makefile.in  Makefile.qt.include  Makefile.qttest.include  Makefile.test.include  addrman.h  alert.h  aliencoin-cli-res.rc  aliencoin-cli.cpp  aliencoin-tx.cpp  aliencoind-res.rc  aliencoind.cpp  allocators.h  amount.cpp  amount.h  base58.cpp  base58.h  bloom.h  chain.h  chainparams.cpp  chainparams.h  chainparamsbase.cpp  chainparamsbase.h  chainparamsseeds.h  checkpoints.h  checkqueue.h  clientversion.cpp  clientversion.h  coincontrol.h  coins.h  compat.h  compressor.h  core_io.h  core_write.cpp  crypter.h  db.h  eccryptoverify.h  ecwrapper.h  hash.h  init.cpp  (+59 more)
src/compat/: glibc_compat.cpp  glibc_sanity.cpp  sanity.h  strnlen.cpp
src/config/: aliencoin-config.h
src/crypto/: common.h  hmac_sha256.h  hmac_sha512.h  rfc6979_hmac_sha256.h  ripemd160.h  sha1.h  sha256.h  sha512.h
src/json/: json_spirit_value.h  json_spirit_writer_template.h
src/primitives/: block.h  transaction.h
src/qt/: addressbookpage.cpp  addressbookpage.h  addresstablemodel.cpp  addresstablemodel.h  aliencoin.cpp  aliencoin.qrc  aliencoin_locale.qrc  aliencoinaddressvalidator.cpp  aliencoinaddressvalidator.h  aliencoinamountfield.cpp  aliencoinamountfield.h  aliencoingui.cpp  aliencoingui.h  aliencoinstrings.cpp  aliencoinunits.cpp  aliencoinunits.h  askpassphrasedialog.cpp  askpassphrasedialog.h  clientmodel.h  coincontroldialog.cpp  coincontroldialog.h  coincontroltreewidget.h  combatpowerdialog.cpp  combatpowerdialog.h  csvmodelwriter.h  editaddressdialog.cpp  editaddressdialog.h  guiconstants.h  guiutil.cpp  guiutil.h  howtoplaydialog.cpp  howtoplaydialog.h  intro.cpp  intro.h  macdockiconhandler.h  macnotificationhandler.h  macnotificationhandler.mm  networkstyle.cpp  networkstyle.h  notificator.h  (+61 more)
src/qt/forms/: addressbookpage.ui  askpassphrasedialog.ui  coincontroldialog.ui  combatpowerdialog.ui  editaddressdialog.ui  helpmessagedialog.ui  howtoplaydialog.ui  intro.ui  openuridialog.ui  optionsdialog.ui  overviewpage.ui  petattrdialog.ui  petfeeddialog.ui  petplanetdlg.ui  petresearchinstitute.ui  receivecoinsdialog.ui  rpcconsole.ui  sendcoinsdialog.ui  sendcoinsentry.ui  signverifymessagedialog.ui  transactiondescdialog.ui
src/qt/locale/: aliencoin_ach.ts  aliencoin_af_ZA.ts  aliencoin_ar.ts  aliencoin_be_BY.ts  aliencoin_bg.ts  aliencoin_bs.ts  aliencoin_ca.ts  aliencoin_ca@valencia.ts  aliencoin_ca_ES.ts  aliencoin_cmn.ts  aliencoin_cs.ts  aliencoin_cy.ts  aliencoin_da.ts  aliencoin_de.ts  aliencoin_el_GR.ts  aliencoin_en.ts  aliencoin_eo.ts  aliencoin_es.ts  aliencoin_es_CL.ts  aliencoin_es_DO.ts  aliencoin_es_MX.ts  aliencoin_es_UY.ts  aliencoin_et.ts  aliencoin_eu_ES.ts  aliencoin_fa.ts  aliencoin_fa_IR.ts  aliencoin_fi.ts  aliencoin_fr.ts  aliencoin_fr_CA.ts  aliencoin_gl.ts  aliencoin_gu_IN.ts  aliencoin_he.ts  aliencoin_hi_IN.ts  aliencoin_hr.ts  aliencoin_hu.ts  aliencoin_id_ID.ts  aliencoin_it.ts  aliencoin_ja.ts  aliencoin_ka.ts  aliencoin_kk_KZ.ts  (+31 more)
src/qt/res/: aliencoin-qt-res.aps  aliencoin-qt-res.rc
src/qt/test/: paymentservertests.h  test_main.cpp  uritests.cpp  uritests.h
src/script/: aliencoinconsensus.cpp  aliencoinconsensus.h  interpreter.cpp  interpreter.h  script.h  script_error.h  sigcache.h  sign.h  standard.cpp  standard.h
src/secp256k1/: Makefile.am  README.md  libsecp256k1.pc.in
src/secp256k1/src/java/: org_aliencoin_NativeSecp256k1.c  org_aliencoin_NativeSecp256k1.h
src/secp256k1/src/java/org/aliencoin/: NativeSecp256k1.java
src/test/: README.md  aliencoin-util-test.py  base58_tests.cpp  bignum.h  bip32_tests.cpp  bloom_tests.cpp  checkblock_tests.cpp  compress_tests.cpp  crypto_tests.cpp  getarg_tests.cpp  hash_tests.cpp  key_tests.cpp  netbase_tests.cpp  rpc_wallet_tests.cpp  script_tests.cpp  test_aliencoin.cpp  wallet_tests.cpp
src/test/data/: README.md  aliencoin-util-test.json
src/univalue/: gen.cpp  univalue.h  univalue_escapes.h
(+48 files in other folders)
